# scriptosaurus

./: .gitignore  CMakeLists.txt  Flags.md  README.md  scriptosaurus.h  scriptosaurus.hpp  scriptsaurus_routines.hpp
daemon/: compiler.py  connection.py  daemon.py  environment.py  filer.py
example/: CMakeLists.txt  source.c  source.cpp
example/scripts/math/: trig.c  trig.cpp
include/: ioutput.hpp  script.hpp  script_manager.hpp
samples/: sample1.cpp  sample1_test.cpp
samples/scripts/: script.cpp
samples/scripts/.bin/: script_tmp.exp
script_include/: scriptosaurus.hpp
src/: script.cpp  script_manager.cpp
test/: test.cpp
test/scripts/: SampleScript.cpp
